# pokecli

./: .gitignore  Cargo.toml  LICENSE  README.md  pokecli_plan.md
src/: error.rs  lib.rs  main.rs  utils.rs
src/api/: client.rs  endpoints.rs  mod.rs  models.rs
src/cache/: memory.rs  mod.rs
src/cli/: args.rs  commands.rs  mod.rs
src/config/: settings.rs
src/output/: formatters.rs  mod.rs  themes.rs
